# gstawk

./: INSTALL  Makefile  Makefile.am  README.md  configure.ac  filterFasta  gmake  gstawk  gstawk.c  gstawk.sh  gstawk_make
src/: chrlen.c  cinv.cpp  cluster.cpp  fagrep.c  filterFasta.sh  gstat.c  gstawk.c  gstawk.sh  gstawk_make  nx.c
